fixed button alignment on mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,4 +201,12 @@ a {
   height: 90px;
 }
 
+.flexBtns {
+  flex-direction: row;
+}
+
+.btn-primary {
+  margin: 0px;
+}
+
 }
